Work – fixed grid row gap in CSS
Fixed uneven grid row/col gaps at 960px breakpoint.

--- a/z_support/css/pauldub.css
+++ b/z_support/css/pauldub.css
@@ -360,7 +360,6 @@ p {
 .container-work {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 0;
 }
 
 .work_title {
@@ -432,6 +431,7 @@ grid-column: 2 / 5;
 .container-work {
     display: grid;
     grid-template-columns: 1fr;
+    grid-row-gap: 0;
     margin-top: 12px;
 }
 
@@ -498,7 +498,7 @@ grid-column: 1 / 2;
 
     .about_intro {
         grid-column: 1 / 3;
-        padding: 60px 0 10px;
+        padding: 10px 0 10px;
     }
 
     .about_desc_left {
